Fix user profile button mis-aligned

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -27,7 +27,7 @@
 .home{
    position: absolute;
    top :10px;
-   left: -10px;
+   left: 5px;
    z-index: 3;
 }
 
